--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 
 <project default="compile">
   
-    <property name="src.java.dir" location="./src/Calculator/add"/>
+    <property name="src.java.dir" location="./src/Calculator"/>
     <property name="result.dir" location="./target"/>
     <property name="result.javaclasses.dir" location="${result.dir}/Calculator"/>
   
